@@ -31,19 +31,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Plugin so we can use Mockito with Java 22 without errors -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-                <configuration>
-                    <argLine>
-                        --add-opens fr.ufrst.m1info.pvm.group5.ast/fr.ufrst.m1info.pvm.group5.ast.Nodes=ALL-UNNAMED
-                        --add-opens java.base/java.lang=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
 
